# msyd

./: README.md  action.yml  cigar.pyx  classes.pyx  coresyn.pyx  crosssyn.pyx  environment.yml  example.tsv  example_vcf.vcf  example_workflow.md  example_workflow.sh  format.md  genomes.tsv  ingest.pyx  logo.tex  main.py  minimap_submit.sh  pansym.pyx  pansyn.pyx  prepare.sh  pyproject.toml  requirements.txt  setup.py  snpcmp.pyx  syn.pyx  syntools.pyx  syri_submit.sh  test_pansym.sh  tests.py  util.pyx  varcmp.pyx  view_reference.md  workflow.dot
.github/workflows/: build.yml  lint.yml  python-package.yml  (+3 more)
ampril_scripts/: msyd_bench.sh  msyd_benchp.sh  pansyn_bench.sh  pansyn_benchp.sh  pansyri_bench.sh  pansyri_benchmark.sh  pansyri_benchp.sh  pasy_bench.sh  pasy_benchp.sh  plotsr_call.sh  run_syri.sh
ampsynth_scripts/: gen_chrs.py  gen_tsv.sh  minimap_submit.sh  pansyri_benchmark.sh  syri_submit.sh
conda.recipe/: meta.yaml
docs/: format.md  glossary.md
drosophila_scripts/: minimap_submit.sh
example/: example_workflow.sh  listofjokes.txt
hgsv_scripts/: bgzcomp.sh  bgzconv.sh  extract_chrs.sh  extract_submit.sh  gen_tsv.sh  minimap_submit.sh  msyd_submit.sh  pansr_all_submit.sh  pansr_submit.sh  pansyri_bench.sh  pansyri_benchmark.sh  pansyri_benchp.sh  pansyri_submit.sh  pasy_submit.sh  scaffold.sh  syri_submit.sh
img/: logo.tex  workflow.dot
msyd/: __init__.py  annotate_sv.py  main.py  ordering.py
msyd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pansr/: __init__.py  util.pyx  varcmp.pyx
pansyri/: ordering.py
py/: analysis_plots.py
sh/: potato_hap_analysis.sh
tests/: benchmark_ampril.sh  benchmark_hgsv.sh  plot.R  test_cigar.py  test_multisyn.py  test_multisyn_int.py  test_pansyn.py  test_pansyn_int.py  test_viewlang.py  tests.py
(+91 files in other folders)
