[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "msyd"
# project homepage: https://github.com/schneebergerlab/msyd
authors = [
    {name = "Leon Rauschning"},
    {name = "Manish Goel"},
]
description = "Synteny identification across multiple genome assemblies"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Structural Variation", "SV", "Pangenomics", "Bioinformatics"]
license = {text = "MIT"}
dependencies = [
	"numpy", 
	"scipy",
	"cython",
	"pandas",
	"pysam >= 0.21",
	"mappy",
	"intervaltree",
	"syri >= 1.6.5",
]
dynamic = ["version"]


[project.scripts]
msyd = "msyd:main"

[tool.setuptools.dynamic]
version = {attr = "msyd.__version__"}

